<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_unpaid"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/unpaid" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />


        <item
            android:id="@+id/nav_aboutUs"
            android:title="@string/about_us" />


        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>


</menu>
