<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment"

    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carNumber"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/chasiss_number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_chasissNumber"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/motor_number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_motorNumber"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_owner"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carQwner"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carColor"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_model"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carModel"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carType"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/station"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_station"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_hight_normal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/car_brand"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_txVw_carBrand"
                style="@style/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>